--- a/PharmacyDeliverySystem/Views/Order/PharmacyOrders.cshtml
+++ b/PharmacyDeliverySystem/Views/Order/PharmacyOrders.cshtml
@@ -54,6 +54,7 @@
                             <a asp-controller="QrConfirmation"
                                asp-action="InvoiceDetails"
                                asp-route-orderId="@o.OrderId"
+                               asp-route-isPharmacy="true"
                                class="btn btn-sm btn-outline-secondary">
                                 Invoice
                             </a>
