--- a/PharmacyDeliverySystem/Views/Products/Details.cshtml
+++ b/PharmacyDeliverySystem/Views/Products/Details.cshtml
@@ -39,10 +39,10 @@
             </div>
         </div>
 
-        <a class="product-details-back"
+@*         <a class="product-details-back"
            href="@Url.Action("Index", "Products")">
             ← Back to products
-        </a>
+        </a> *@
     </header>
 
     <!-- ===== Main card ===== -->
