--- a/PharmacyDeliverySystem/Views/Home/Index.cshtml
+++ b/PharmacyDeliverySystem/Views/Home/Index.cshtml
@@ -372,8 +372,7 @@
                 <div class="footer-social">
                     <a href="#" aria-label="Facebook">📘</a>
                     <a href="#" aria-label="LinkedIn">🔗</a>
-                    <a href="https://www.instagram.com/PharmacyMarts"
-                       target="_blank" aria-label="Instagram">📸</a>
+                    <a href="#" aria-label="Instagram">📸</a>
                     <a href="#" aria-label="X / Twitter">✖</a>
                 </div>
 
